--- a/package.json
+++ b/package.json
@@ -17,6 +17,13 @@
   },
   "homepage": "https://github.com/meo-pill/IPM-L3#readme",
   "dependencies": {
+    "@angular/cdk": "^17.1.0",
+    "@angular/cli": "^17.1.0",
+    "@angular/compiler": "^17.1.0",
+    "@angular/core": "^17.1.0",
+    "@angular/forms": "^17.1.0",
+    "@angular/material": "^17.1.0",
+    "@angular/router": "^17.1.0",
     "bootstrap": "^5.3.2"
   }
 }
