--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular/forms": "^17.1.0",
     "@angular/material": "^17.1.0",
     "@angular/router": "^17.1.0",
-    "bootstrap": "^5.3.2"
+    "bootstrap": "^5.3.2",
+    "node": "^21.6.0",
+    "nodejs": "^0.0.0"
   }
 }
