--- a/dashfront/package.json
+++ b/dashfront/package.json
@@ -15,9 +15,12 @@
     "@angular/compiler": "^17.1.0",
     "@angular/core": "^17.1.0",
     "@angular/forms": "^17.1.0",
+    "@angular/google-maps": "^17.1.2",
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
+    "@google/maps": "^1.1.3",
+    "@googlemaps/js-api-loader": "^1.16.6",
     "bootstrap": "^5.3.2",
     "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
@@ -28,6 +31,7 @@
     "@angular-devkit/build-angular": "^17.1.2",
     "@angular/cli": "^17.1.2",
     "@angular/compiler-cli": "^17.1.0",
+    "@types/google.maps": "^3.55.4",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
