--- a/dashfront/angular.json
+++ b/dashfront/angular.json
@@ -30,11 +30,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/assets/css/nucleo-icons.css",
-              "src/assets/scss/blk-design-system.scss",
-              "src/assets/demo/demo.css"
+              "src/assets/scss/blk-design-system.scss"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
