--- a/dashfront/angular.json
+++ b/dashfront/angular.json
@@ -95,7 +95,7 @@
             "styles": [
               "src/styles.scss",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/assets/scss/blk-design-system.scss",
+              "src/assets/scss/blk-design-system.scss"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
